--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
                 <div>
                     <div class="btn-group">
-                        <button class="btn-month" onclick="onClick()">Monthly</button>
-                        <button onclick="change()">Annually</button>
+                        <button class="btn-month --selected" onclick="onClick()">Monthly</button>
+                        <button class="btn-month" onclick="change()">Annually</button>
                     </div>
 
                     <div class="table">
