--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                         <button class="btn-month" onclick="change()">Annually</button>
                     </div>
 
-                    <div class="table">
-                         <table >
+                    <div >
+                         <table class="table" >
                         <thead>
                             <tr>
-                                <th></th>
+                               <th></th>
                                 <th>
                                     <div class="free-trail">
-                                        <h2> Free Trail</h2>
+                                        <h2> Free Trial</h2>
                                         <h1> $0 </h1>
                                         <p class="free-Para">7days Free Trail</p>
                                         <button class="btn-hd">Start Free trail</button>
