--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                                     <div class="free-trail">
                                         <h2> Free Trial</h2>
                                         <h1> $0 </h1>
-                                        <p class="free-Para">7days Free Trail</p>
-                                        <button class="btn-hd">Start Free trail</button>
+                                        <p class="free-Para" >7days Free Trail</p>
+                                        <button class="btn-hd" data-btn="">Start Free trail</button>
                                         <p class="free-Para para2 ">A good way to see our wonderful <br> features and how they work </p>
                                     </div>
                                 </th>
@@ -99,117 +99,121 @@
                             <tr>
                                 <td colspan="10" class="features "><h2 class="center-features">Features</h2></td>
                             </tr>
-                            <tr>
-                                <td>Count of Devices</td>
-                                <td class="devices">3 Devices</td>
-                                <td class="devices">10 - 1000 Devices</td>
-                                <td class="devices">1001 - 5000 Devices</td>
-                                <td class="devices">5001 - 15000 Devices</td>
-                                <td class="devices">150001 Devices and above</td>
+                            <tr>    
+                                <div class="new-table">
+                                    <td class="title">Count of Devices</td>
+                                    <td class="devices head" data-label="Free">3 Devices</td>
+                                    <td class="devices head" data-label="Basic">10 - 1000 Devices</td>
+                                    <td class="devices head" data-label="Standard">1001 - 5000 Devices</td>
+                                    <td class="devices head" data-label="Business">5001 - 15000 Devices</td>
+                                    <td class="devices head" data-label="Enterprise">150001 Devices and above</td>
+                                </div>
+                                   
+                               
                             </tr>
                             <tr>
-                                <td>QR code - based Enrolment</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">QR code - based Enrolment</td>
+                                <td class="devices check" data-label="Free" ><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Zero Touch Enrolment</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Zero Touch Enrolment</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
                                 <td>Identify and Access Management</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Over- the- air device update and configurations</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Over- the- air device update and configurations</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Holistic user &role management</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Holistic user &role management</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Remote device controls</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Remote device controls</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Real-time monitoring of devices check location and activities</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Real-time monitoring of devices check location and activities</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Monitor data usage by apps</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Monitor data usage by apps</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Kiosk Lockdown</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Kiosk Lockdown</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Lockdown devices check to an organization's private network</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Lockdown devices check to an organization's private network</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
+                            </tr>
+                            <tr >
+                                <td class="title">Download apps from google playstore</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Download apps from google playstore</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Support "NO Login" for users organization as required</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
-                                <td>Support "NO Login" for users organization as required</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                            </tr>
-                            <tr>
-                                <td>Windows Kiosk Lockdown</td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
-                                <td class="devices check"><i class="fas fa-check"></i></td>
+                                <td class="title">Windows Kiosk Lockdown</td>
+                                <td class="devices check" data-label="Free"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Basic"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Standard"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Business"><i class="fas fa-check"></i></td>
+                                <td class="devices check" data-label="Enterprise"><i class="fas fa-check"></i></td>
                             </tr>
                             <tr>
                                 <td></td>
